Add GitHub Pages deployment with GitHub Actions

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,13 +6,19 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "serve": "serve -s build -l 3000"
+    "serve": "serve -s build -l 3000",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
+  "homepage": "https://trandoantungduong.github.io/Docker",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "serve": "^14.2.1"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.0"
   },
   "browserslist": {
     "production": [
